--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -322,6 +322,7 @@ en:
     create_and_add_another: "Create and Add Another"
     create: "Create"
     cancel: "Cancel"
+    resume: "Resume"
     save: "Save"
     edit: "Edit"
     update: "Update"
@@ -656,6 +657,8 @@ en:
       controls:
         back_to_my_inventory: Back to my inventory
     orders:
+      edit:
+        order_sure_want_to: Are you sure you want to %{event} this order?
       invoice_email_sent: 'Invoice email has been sent'
       order_email_resent: 'Order email has been resent'
       bulk_management:
