Fix a number of spree translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -327,6 +327,11 @@ en:
     edit: "Edit"
     update: "Update"
     delete: "Delete"
+    add: "Add"
+    cut: "Cut"
+    paste: "Paste"
+    destroy: "Destroy"
+    rename: "Rename"
 
   admin:
     # Common properties / models
@@ -3059,6 +3064,8 @@ See the %{link} to find out more about %{sitename}'s features and to start using
     server: "Server"
     test_mode: "Test Mode"
     logourl: "Logourl"
+    are_you_sure_delete: "Are you sure you want to delete this record?"
+    confirm_delete: "Confirm Deletion"
 
     configurations: "Configurations"
     general_settings: "General Settings"
