--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3031,6 +3031,8 @@ See the %{link} to find out more about %{sitename}'s features and to start using
     delete: "Delete"
     cannot_set_shipping_method_without_address: "Cannot set shipping method until customer details are provided."
     no_tracking_present: "No tracking details provided."
+    tracking: "Tracking"
+    tracking_number: "Tracking Number"
     order_total: "Order Total"
     customer_details: "Customer Details"
     customer_search: "Customer Search"
